force-app/main/default/objects/CertificateRequest__c/CertificateRequest__c.object-meta.xml
<CustomObject>
    <description>PacPoint-FT041820- Created for PVL phase 1</description>
    <label>Certificate Request</label>
    <nameField>
        <displayFormat>CR-{00000}</displayFormat>
        <label>Certificate Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Certificate Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>