force-app/main/default/objects/CertificateRequest__c/fields/ALIASModifiedBy__c.field-meta.xml
<CustomField>
    <fullName>ALIASModifiedBy__c</fullName>
    <description>PacPoint-FT041820- Created for PVL phase 1</description>
    <label>ALIAS Modified By</label>
    <length>50</length>
    <type>Text</type>
</CustomField>