force-app/main/default/objects/CertificateRequest__c/fields/CertificateType__c.field-meta.xml
<CustomField>
    <fullName>CertificateType__c</fullName>
    <description>PacPoint-FT041820- Created for PVL phase 1</description>
    <label>Certificate Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>B - POCKET ID &amp; WALL CERTIFICATE</fullName>
            </value>
            <value>
                <fullName>C - WALL CERTIFICATE</fullName>
            </value>
            <value>
                <fullName>M - SUSPENSE TYPE</fullName>
            </value>
            <value>
                <fullName>P - POCKET IDENTIFICATION CARD</fullName>
            </value>
            <value>
                <fullName>R - REJECTION (AND RETURN)</fullName>
            </value>
            <value>
                <fullName>VR - VERIFICATION REQUEST</fullName>
            </value>
            <value>
                <fullName>W - RENEWAL NOTICE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>