force-app/main/default/objects/CertificateRequest__c/fields/CreateTransaction__c.field-meta.xml
<CustomField>
    <fullName>CreateTransaction__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Create Transaction</label>
    <type>Checkbox</type>
</CustomField>