force-app/main/default/objects/CertificateRequest__c/fields/DateIssued__c.field-meta.xml
<CustomField>
    <fullName>DateIssued__c</fullName>
    <description>PacPoint-FT041820- Created for PVL phase 1</description>
    <label>Date Issued</label>
    <type>Date</type>
</CustomField>