force-app/main/default/objects/CertificateRequest__c/fields/DateReceived__c.field-meta.xml
<CustomField>
    <fullName>DateReceived__c</fullName>
    <description>PacPoint-FT041820- Created for PVL phase 1</description>
    <label>Date Received</label>
    <type>Date</type>
</CustomField>