force-app/main/default/objects/CertificateRequest__c/fields/DerogatoryInformation__c.field-meta.xml
<CustomField>
    <fullName>DerogatoryInformation__c</fullName>
    <formula>If( Derogatoryinformationisonfile__c , &apos;&lt;span style=&quot;font-size: 10pt;&quot;&gt;&lt;u&gt;x&lt;/u&gt;&lt;/span&gt;&apos;, &apos;&lt;span style=&quot;font-size: 10pt;&quot;&gt;&amp;nbsp;&lt;/span&gt;&apos; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Derogatory Information</label>
    <type>Text</type>
</CustomField>