force-app/main/default/objects/CertificateRequest__c/fields/Derogatoryinformationisonfile__c.field-meta.xml
<CustomField>
    <fullName>Derogatoryinformationisonfile__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PacPoint-DN11232020 - Created for PVL Sprint 7 Phase 1</description>
    <label>Derogatory information is on file</label>
    <type>Checkbox</type>
</CustomField>