force-app/main/default/objects/CertificateRequest__c/fields/DisciplinaryAction__c.field-meta.xml
<CustomField>
    <fullName>DisciplinaryAction__c</fullName>
    <label>Disciplinary Action</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>