force-app/main/default/objects/CertificateRequest__c/fields/FormControlNumber__c.field-meta.xml
<CustomField>
    <fullName>FormControlNumber__c</fullName>
    <description>PacPoint-FT041820- Created for PVL phase 1</description>
    <label>Form Control Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>