force-app/main/default/objects/CertificateRequest__c/fields/License__c.field-meta.xml
<CustomField>
    <fullName>License__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>PacPoint-FT041820- Created for PVL phase 1</description>
    <label>License</label>
    <referenceTo>License__c</referenceTo>
    <relationshipLabel>Certificate Requests</relationshipLabel>
    <relationshipName>Certificate_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>