force-app/main/default/objects/CertificateRequest__c/fields/NoderogatoryInformation__c.field-meta.xml
<CustomField>
    <fullName>NoderogatoryInformation__c</fullName>
    <formula>If( Noderogatoryinformationisonfile__c , &apos;&lt;span style=&quot;font-size: 10pt;&quot;&gt;&lt;u&gt;x&lt;/u&gt;&lt;/span&gt;&apos;, &apos;&lt;span style=&quot;font-size: 10pt;&quot;&gt;&amp;nbsp;&lt;/span&gt;&apos; )</formula>
    <label>Noderogatory Information</label>
    <type>Text</type>
</CustomField>