force-app/main/default/objects/CertificateRequest__c/fields/NumberofLicenseVerifications__c.field-meta.xml
<CustomField>
    <fullName>NumberofLicenseVerifications__c</fullName>
    <label>Number of License Verifications</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>