force-app/main/default/objects/CertificateRequest__c/fields/ReasonforRequest__c.field-meta.xml
<CustomField>
    <fullName>ReasonforRequest__c</fullName>
    <description>PacPoint-FT041820- Created for PVL phase 1</description>
    <label>Reason for Request</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A - ADDITIONAL CLASS PRIVILEGE</fullName>
            </value>
            <value>
                <fullName>B - SALES CERT RET&apos;D-NOW A BROKER</fullName>
            </value>
            <value>
                <fullName>C - NAME CHANGE/RELOCATION</fullName>
            </value>
            <value>
                <fullName>D - DAMAGED ORIGINAL (OBSOLETE - SEE CODE &quot;L&quot;)</fullName>
            </value>
            <value>
                <fullName>E - WALL CERT RET&apos;D BY EMPLOYER</fullName>
            </value>
            <value>
                <fullName>F - RELICENSED AFTER FORFEITURE/TERMINATION OF LICENSE</fullName>
            </value>
            <value>
                <fullName>G - EMPLOYMENT CHANGE; NEW POCKET ID CARD ISSUED</fullName>
            </value>
            <value>
                <fullName>H - BOUNCED CHECK WALL CERT AND/OR POCKET ID RETURNED</fullName>
            </value>
            <value>
                <fullName>I - INACTIVE - WALL CERT RET&apos;D</fullName>
            </value>
            <value>
                <fullName>K - LICENSEE INACTIVATED; NEW POCKET ID CARD ISSUED</fullName>
            </value>
            <value>
                <fullName>L - ORIGINAL WAS LOST/DAMAGED/STOLEN</fullName>
            </value>
            <value>
                <fullName>M - RE-MAILED WALL CERT PREVIOUSLY RET&apos;D BY EMPLR/POST OFFICE</fullName>
            </value>
            <value>
                <fullName>N - NEW</fullName>
            </value>
            <value>
                <fullName>O - NO LONGER NEEDED-SOLE TO RME</fullName>
            </value>
            <value>
                <fullName>P - RET&apos;D BY POST OFFICE</fullName>
            </value>
            <value>
                <fullName>R - REACTIVATED - WALL CERT MAILED/REINSTATEMENT</fullName>
            </value>
            <value>
                <fullName>S - STOLEN (OBSOLETE - SEE CODE &quot;L&quot;)</fullName>
            </value>
            <value>
                <fullName>T - TERMINATED</fullName>
            </value>
            <value>
                <fullName>W - ID CARD ISSUED AT RENEWAL</fullName>
            </value>
            <value>
                <fullName>Z - DISCIPLINED</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>