force-app/main/default/objects/CertificateRequest__c/fields/Remarks__c.field-meta.xml
<CustomField>
    <fullName>Remarks__c</fullName>
    <description>PacPoint-FT041820- Created for PVL phase 1</description>
    <label>Remarks</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>