force-app/main/default/objects/CertificateRequest__c/fields/RequestedDate__c.field-meta.xml
<CustomField>
    <fullName>RequestedDate__c</fullName>
    <description>PacPoint-FT041820- Created for PVL phase 1</description>
    <label>Requested Date</label>
    <type>Date</type>
</CustomField>