force-app/main/default/objects/CertificateRequest__c/fields/RequestorAddress__c.field-meta.xml
<CustomField>
    <fullName>RequestorAddress__c</fullName>
    <description>PacPoint-FT041820- Created for PVL phase 1</description>
    <label>Requestor Address</label>
    <type>TextArea</type>
</CustomField>