force-app/main/default/objects/CertificateRequest__c/fields/RequestorCity__c.field-meta.xml
<CustomField>
    <fullName>RequestorCity__c</fullName>
    <description>PacPoint-FT041820- Created for PVL phase 1</description>
    <label>Requestor City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>