force-app/main/default/objects/CertificateRequest__c/fields/RequestorName__c.field-meta.xml
<CustomField>
    <fullName>RequestorName__c</fullName>
    <description>PacPoint-FT041820- Created for PVL phase 1</description>
    <label>Requestor Name</label>
    <type>TextArea</type>
</CustomField>