force-app/main/default/objects/CertificateRequest__c/fields/RequestorState__c.field-meta.xml
<CustomField>
    <fullName>RequestorState__c</fullName>
    <description>PacPoint-FT041820- Created for PVL phase 1</description>
    <label>Requestor State</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>USStates</valueSetName>
    </valueSet>
</CustomField>