force-app/main/default/objects/CertificateRequest__c/fields/RequestorZipCode__c.field-meta.xml
<CustomField>
    <fullName>RequestorZipCode__c</fullName>
    <description>PacPoint-FT041820- Created for PVL phase 1</description>
    <label>Requestor Zip Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>